Adding new dev branch (zynrr)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="font.css" />
     <title>Portofolio</title>
-</head>
-<body>
-    Hello World!
-</body>
+  </head>
+  <body>
+    <section id="hero">
+      <nav>
+        <h1>Tokioshy</h1>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Portofolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+
+      <div class="text">
+        <p>Hello,</p>
+        <h1>I'm <span class="bold">Tokioshy Herman Saputra</span></h1>
+        <h2>a <span class="bold">Student</span></h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed
+          pharetra leo. Nunc vitae metus auctor, vestibulum lorem id, hendrerit
+          neque.
+        </p>
+      </div>
+    </section>
+  </body>
 </html>
