Create a home page

--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
     <title>Portofolio</title>
   </head>
   <body>
+    <nav>
+      <h1>Tokioshy</h1>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Portofolio</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
     <section id="hero">
-      <nav>
-        <h1>Tokioshy</h1>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Portofolio</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-
       <div class="text">
         <p>Hello,</p>
         <h1>I'm <span class="bold">Tokioshy Herman Saputra</span></h1>
@@ -28,7 +27,12 @@
           pharetra leo. Nunc vitae metus auctor, vestibulum lorem id, hendrerit
           neque.
         </p>
+        <div class="buttons">
+          <a href="#" class="button">Learn More</a>
+          <a href="#" class="button">Download CV</a>
+        </div>
       </div>
+      <img src="./assets/images/Image (1).png" alt="Chitoge" />
     </section>
   </body>
 </html>
