--- a/dev-tokioshy/index.html
+++ b/dev-tokioshy/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Portofolio</title>
 </head>
-<body>
-    Hello World!
+<body class="container">
+    <div class="contact" id="contact">
+        <p class="title">Get In <strong>Touch</strong></p>
+    </div>
 </body>
 </html>
