Updating main branch (merge)

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <nav>
       <h1>Tokioshy</h1>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about-me">About</a></li>
         <li><a href="#">Portofolio</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <section id="hero">
+    <section id="home">
       <div class="text">
         <p>Hello,</p>
         <h1>I'm <span class="bold">Tokioshy Herman Saputra</span></h1>
@@ -32,7 +32,25 @@
           <a href="#" class="button">Download CV</a>
         </div>
       </div>
-      <img src="./assets/images/Image (1).png" alt="Chitoge" />
+      <img src="./images/Image (1).png" alt="Chitoge" />
+    </section>
+
+    <section id="about-me">
+      <img src="./images/Image (2).png" alt="Image 2">
+      <div class="text">
+        <h1>About <span class="bold">Me</span></h1>
+        <p>
+          A student who has big dreams but is too lazy to study. He might be
+          able to become a great person, but his lazy nature is an obstacle for
+          him to develop. He has been familiar with programming since the 8th
+          grade of junior high school. The first project he created was to
+          create a Discord bot using the Javascript programming language.
+        </p>
+      </div>
+    </section>
+
+    <section id="contact">
+      <h1>Get In <span class="bold">Touch</span></h1>
     </section>
   </body>
 </html>
