Adding project page (portofolio)

--- a/dev-zynrr/index.html
+++ b/dev-zynrr/index.html
@@ -3,52 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="font.css" />
-    <title>Portofolio</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
-    <nav>
-      <h1>Tokioshy</h1>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about-me">About</a></li>
-        <li><a href="#projects">Portofolio</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-    <section id="home">
-      <div class="text">
-        <p>Hello,</p>
-        <h1>I'm <span class="bold">Tokioshy Herman Saputra</span></h1>
-        <h2>a <span class="bold">Student</span></h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed
-          pharetra leo. Nunc vitae metus auctor, vestibulum lorem id, hendrerit
-          neque.
-        </p>
-        <div class="buttons">
-          <a href="#" class="button">Learn More</a>
-          <a href="#" class="button">Download CV</a>
-        </div>
-      </div>
-      <img src="./images/Image (1).png" alt="Chitoge" />
-    </section>
-
-    <section id="about-me">
-      <img src="./images/Image (2).png" alt="Image 2">
-      <div class="text">
-        <h1>About <span class="bold">Me</span></h1>
-        <p>
-          A student who has big dreams but is too lazy to study. He might be
-          able to become a great person, but his lazy nature is an obstacle for
-          him to develop. He has been familiar with programming since the 8th
-          grade of junior high school. The first project he created was to
-          create a Discord bot using the Javascript programming language.
-        </p>
-      </div>
-    </section>
-
     <section id="projects">
       <h1 class="title">My <span class="bold">Project</span></h1>
       <div class="cards">
@@ -91,10 +49,6 @@
           <a href="#" class="button">See More</a>
         </div>
       </div>
-    </section>
-
-    <section id="contact">
-      <h1>Get In <span class="bold">Touch</span></h1>
     </section>
   </body>
 </html>
