--- a/dev-tokioshy/index.html
+++ b/dev-tokioshy/index.html
@@ -6,9 +6,20 @@
     <link rel="stylesheet" href="style.css">
     <title>Portofolio</title>
 </head>
-<body class="container">
-    <div class="contact" id="contact">
-        <p class="title">Get In <strong>Touch</strong></p>
+<body>
+    <p class="title">Get In <strong>Touch</strong></p>
+    <div class="container">
+      <div class="contact-input">
+        <input type="text" class="name" placeholder="Your Name" id="name">
+        <input type="email" class="email" placeholder="Your Email" id="email">
+        <input type="number" class="number" placeholder="Your Phone">
+        <input type="text" class="message" placeholder="Write a Message">
+      </div>
+      <div class="contact" id="contact">
+        <p class="t">Get In Touch</p>
+        <p class="c">My Contact Details</p>
+      </div>
     </div>
+
 </body>
 </html>
