--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="font.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <title>Portofolio</title>
   </head>
   <body>
@@ -36,7 +40,7 @@
     </section>
 
     <section id="about-me">
-      <img src="./images/Image (2).png" alt="Image 2">
+      <img src="./images/Image (2).png" alt="Image 2" />
       <div class="text">
         <h1>About <span class="bold">Me</span></h1>
         <p>
@@ -77,7 +81,7 @@
           </div>
           <a href="#" class="button">See More</a>
         </div>
-        
+
         <div class="card">
           <img src="../images/Rectangle.png" alt="Typing" />
           <div class="text-card">
@@ -96,5 +100,31 @@
     <section id="contact">
       <h1>Get In <span class="bold">Touch</span></h1>
     </section>
+    <button onclick="topFunction()" id="top-btn" title="Go to top">
+      <i class="fa-solid fa-circle-up"></i>
+    </button>
   </body>
+  <script>
+    // let mybutton = document.getElementById("myBtn");
+
+    // window.onscroll = function () {
+    //   scrollFunction();
+    // };
+
+    // function scrollFunction() {
+    //   if (
+    //     document.body.scrollTop > 20 ||
+    //     document.documentElement.scrollTop > 20
+    //   ) {
+    //     mybutton.style.display = "block";
+    //   } else {
+    //     mybutton.style.display = "none";
+    //   }
+    // }
+
+    function topFunction() {
+      document.body.scrollTop = 0; // For Safari
+      document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+    }
+  </script>
 </html>
