--- a/index.html
+++ b/index.html
@@ -104,27 +104,5 @@
       <i class="fa-solid fa-circle-up"></i>
     </button>
   </body>
-  <script>
-    // let mybutton = document.getElementById("myBtn");
-
-    // window.onscroll = function () {
-    //   scrollFunction();
-    // };
-
-    // function scrollFunction() {
-    //   if (
-    //     document.body.scrollTop > 20 ||
-    //     document.documentElement.scrollTop > 20
-    //   ) {
-    //     mybutton.style.display = "block";
-    //   } else {
-    //     mybutton.style.display = "none";
-    //   }
-    // }
-
-    function topFunction() {
-      document.body.scrollTop = 0; // For Safari
-      document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
-    }
-  </script>
+  <script src="script.js"></script>
 </html>
