--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
+    <link
+      rel="shortcut icon"
+      href="./images/tokioshy.png"
+      type="image/x-icon"
+    />
     <title>Portofolio</title>
   </head>
   <body>
