--- a/tailwind-ver/index.html
+++ b/tailwind-ver/index.html
@@ -4,34 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <title>Portofolio</title>
   </head>
   <body class="bg-[#252734]">
     <nav
       class="flex bg-[#ffaf27] rounded-br-full rounded-bl-full justify-around py-5 align-center"
     >
       <h1 class="text-2xl md:text-3xl">Tokioshy</h1>
-      <ul class="flex align-center">
-        <li class="mx-1 text-lg md:text-xl"><a href="#home">Home</a></li>
-        <li class="mx-1 text-lg md:text-xl"><a href="#about-me">About</a></li>
-        <li class="mx-1 text-lg md:text-xl">
+      <ul class="hidden md:flex align-center">
+        <li class="mx-2 text-lg md:text-xl"><a href="#home">Home</a></li>
+        <li class="mx-2 text-lg md:text-xl"><a href="#about-me">About</a></li>
+        <li class="mx-2 text-lg md:text-xl">
           <a href="#projects">Portofolio</a>
         </li>
-        <li class="mx-1 text-lg md:text-xl"><a href="#contact">Contact</a></li>
+        <li class="mx-2 text-lg md:text-xl"><a href="#contact">Contact</a></li>
       </ul>
+      <button class="block md:hidden text-2xl">
+        <i class="fa-solid fa-bars"></i>
+      </button>
     </nav>
 
     <section
-      class="flex justify-around items-center h-screen md:flex-row-reverse flex-col" id="home"
+      class="flex justify-around items-center h-screen md:flex-row-reverse flex-col"
+      id="home"
     >
       <img
         src="../images/Image (1).png"
         alt="Chitoge"
         class="max-h-[65%] md:max-h-full w-auto"
       />
-      <div
-        class="text-white md:w-1/3 text-center md:text-left"
-      >
+      <div class="text-white md:w-1/3 text-center md:text-left">
         <p class="text-3xl">Hello,</p>
         <h1 class="text-3xl md:text-4xl">
           I'm <span class="font-semibold">Tokioshy Herman Saputra</span>
@@ -45,18 +51,31 @@
           neque.
         </p>
         <div class="mt-3 text-black">
-          <a href="#" class="bg-[#ffaf27] px-3 py-2 rounded-full">Learn More</a>
-          <a href="#" class="bg-[#ffaf27] px-3 py-2 rounded-full"
+          <a href="#about-me" class="bg-[#ffaf27] px-3 py-2 rounded-full">Learn More</a>
+          <a href="../images/tokioshy.png" class="bg-[#ffaf27] px-3 py-2 rounded-full" download="Tokioshy's Head"
             >Download CV</a
           >
         </div>
       </div>
     </section>
 
-    <section class="h-screen flex items-center justify-around" id="about-me">
-      <img src="../images/Image (2).png" alt="Chitoge 2" />
-      <div class="w-1/3 text-white border-l-4 border-[#ffaf27]  pl-4">
-        <h1 class="text-3xl md:text-4xl">About <span class="font-semibold">Me</span></h1>
+    <section
+      class="h-screen flex flex-col md:flex-row items-center justify-around"
+      id="about-me"
+    >
+      <img
+        src="../images/Image (2).png"
+        alt="Chitoge 2"
+        class="max-h-[65%] md:max-h-full"
+      />
+      <div
+        class="w-full md:w-1/3 text-white md:border-l-4 border-[#ffaf27] pl-4"
+      >
+        <h1
+          class="text-3xl md:text-4xl border-b-4 md:border-0 border-[#ffaf27] w-fit"
+        >
+          About <span class="font-semibold">Me</span>
+        </h1>
         <p class="text-lg md:text-2xl">
           A student who has big dreams but is too lazy to study. He might be
           able to become a great person, but his lazy nature is an obstacle for
@@ -66,5 +85,100 @@
         </p>
       </div>
     </section>
+
+    <section class="h-screen" id="projects">
+      <h1
+        class="text-3xl text-white border-b-4 w-fit border-[#ffaf27] pb-2 ml-5"
+      >
+        My <span class="font-semibold">Project</span>
+      </h1>
+      <div class="block md:flex justify-evenly w-2/3 m-auto">
+        <!-- Card  1 -->
+        <div
+          class="w-full md:w-80 justify-center items-center bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
+        >
+          <img
+            src="../images/Rectangle.png"
+            alt="img"
+            title="img"
+            class="w-full h-auto object-cover rounded-t-lg"
+          />
+          <div class="w-full p-4 justify-start flex flex-col text-white">
+            <h1 class="text-3xl font-bold">Typing english with me!</h1>
+            <p class="my-4">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
+              tortor dignissim convallis aenean. Imperdiet massa tincidunt nunc
+              pulvinar.
+            </p>
+            <a
+              href="#"
+              class="my-4 px-4 py-2 text-white text-center hover:bg-[#cc8c1f] bg-[#ffaf27]"
+            >
+              Read more
+            </a>
+          </div>
+        </div>
+
+        <!-- Card  2 -->
+        <div
+          class="w-full md:w-80 justify-center items-center bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
+        >
+          <img
+            src="../images/Rectangle.png"
+            alt="img"
+            title="img"
+            class="w-full h-auto object-cover rounded-t-lg"
+          />
+          <div class="w-full p-4 justify-start flex flex-col text-white">
+            <h1 class="text-3xl font-bold">Typing english with me!</h1>
+            <p class="my-4">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
+              tortor dignissim convallis aenean. Imperdiet massa tincidunt nunc
+              pulvinar.
+            </p>
+            <a
+              href="#"
+              class="my-4 px-4 py-2 text-white text-center hover:bg-[#cc8c1f] bg-[#ffaf27]"
+            >
+              Read more
+            </a>
+          </div>
+        </div>
+
+        <!-- Card  3 -->
+        <div
+          class="w-full md:w-80 justify-center items-center bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
+        >
+          <img
+            src="../images/Rectangle.png"
+            alt="img"
+            title="img"
+            class="w-full h-auto object-cover rounded-t-lg"
+          />
+          <div class="w-full p-4 justify-start flex flex-col text-white">
+            <h1 class="text-3xl font-bold">Typing english with me!</h1>
+            <p class="my-4">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
+              tortor dignissim convallis aenean. Imperdiet massa tincidunt nunc
+              pulvinar.
+            </p>
+            <a
+              href="#"
+              class="mt-4 px-4 py-2 text-white text-center hover:bg-[#cc8c1f] bg-[#ffaf27]"
+            >
+              Read more
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <button onclick="topFunction()" class="hidden bg-[#ffaf27] fixed bottom-5 md:bottom-20 right-3 md:right-20 z-100 border-0 outline-none py-3 px-4 rounded-full text-3xl" title="Go to top" id="go-to-top">
+        <i class="fa-solid fa-circle-up"></i>
+      </button>
   </body>
+  <script src="../script.js"></script>
+
 </html>
