--- a/tailwind-ver/index.html
+++ b/tailwind-ver/index.html
@@ -51,8 +51,13 @@
           neque.
         </p>
         <div class="mt-3 text-black">
-          <a href="#about-me" class="bg-[#ffaf27] px-3 py-2 rounded-full">Learn More</a>
-          <a href="../images/tokioshy.png" class="bg-[#ffaf27] px-3 py-2 rounded-full" download="Tokioshy's Head"
+          <a href="#about-me" class="bg-[#ffaf27] px-3 py-2 rounded-full"
+            >Learn More</a
+          >
+          <a
+            href="../images/tokioshy.png"
+            class="bg-[#ffaf27] px-3 py-2 rounded-full"
+            download="Tokioshy's Head"
             >Download CV</a
           >
         </div>
@@ -86,13 +91,11 @@
       </div>
     </section>
 
-    <section class="h-screen" id="projects">
-      <h1
-        class="text-3xl text-white border-b-4 w-fit border-[#ffaf27] pb-2 ml-5"
-      >
+    <section class="flex align-center" id="projects">
+      <h1 class="text-3xl text-white border-b-4 w-fit border-[#ffaf27] pb-2">
         My <span class="font-semibold">Project</span>
       </h1>
-      <div class="block md:flex justify-evenly w-2/3 m-auto">
+      <div class="block md:flex justify-center items-center w-2/3 m-auto gap-5">
         <!-- Card  1 -->
         <div
           class="w-full md:w-80 justify-center items-center bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
@@ -175,10 +178,76 @@
         </div>
       </div>
     </section>
-    <button onclick="topFunction()" class="hidden bg-[#ffaf27] fixed bottom-5 md:bottom-20 right-3 md:right-20 z-100 border-0 outline-none py-3 px-4 rounded-full text-3xl" title="Go to top" id="go-to-top">
-        <i class="fa-solid fa-circle-up"></i>
-      </button>
+
+    <section class="h-screen text-white" id="contact">
+      <h1 class="text-3xl text-center">Contact <span class="font-semibold">Me</span></h1>
+      <div class="flex justify-around items-center">
+        <form method="post" action="" class="flex flex-col w-96 gap-3">
+          <h1>Get in touch</h1>
+          <input
+            type="text"
+            name="username"
+            id="username"
+            placeholder="Your name"
+            class="p-2 rounded-lg bg-[#464B61]"
+          />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Your email"
+            class="p-2 rounded-lg bg-[#464B61]"
+          />
+          <input
+            type="number"
+            name="number"
+            id="number"
+            placeholder="Your phone number"
+            class="p-2 rounded-lg bg-[#464B61]"
+          />
+          <input
+            type="text"
+            name="message"
+            id="message"
+            placeholder="Write a message"
+            class="h-40 p-2 rounded-lg bg-[#464B61]"
+          />
+          <input
+            type="submit"
+            value="Send message"
+            class="bg-[#ffaf27] w-fit p-3 rounded-full text-black"
+          />
+        </form>
+
+        <div class="flex flex-col gap-3">
+          <div>
+            <h1 class="text-[#ffaf27] text-xl">Email</h1>
+            <p class="text-lg">example@example.com</p>
+          </div>
+          <div>
+            <h1 class="text-[#ffaf27] text-xl">Phone</h1>
+            <p class="text-lg">+62 123 4567 8910</p>
+          </div>
+          <div>
+            <h1 class="text-[#ffaf27] text-xl">Discord</h1>
+            <a class="text-lg" href="https://discord.com/users/1010474132753883207">tokioshy</a>
+          </div>
+          <div>
+            <h1 class="text-[#ffaf27] text-xl">Email</h1>
+            <p class="text-lg">123 Example Street</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <button
+      onclick="topFunction()"
+      class="hidden bg-[#ffaf27] fixed bottom-5 md:bottom-16 right-3 md:right-16 z-100 border-0 outline-none py-3 px-4 rounded-full text-3xl"
+      title="Go to top"
+      id="go-to-top"
+    >
+      <i class="fa-solid fa-circle-up"></i>
+    </button>
   </body>
   <script src="../script.js"></script>
-
 </html>
