--- a/tailwind-ver/index.html
+++ b/tailwind-ver/index.html
@@ -9,6 +9,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
     <title>Portofolio</title>
+    <style>
+      input[type="number"]::-webkit-inner-spin-button,
+      input[type="number"]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        -moz-appearance: textfield;
+        appearance: none;
+      }
+    </style>
   </head>
   <body class="bg-[#252734]">
     <nav
@@ -91,7 +99,7 @@
       </div>
     </section>
 
-    <section class="flex align-center" id="projects">
+    <section class="h-auto md:h-screen" id="projects">
       <h1 class="text-3xl text-white border-b-4 w-fit border-[#ffaf27] pb-2">
         My <span class="font-semibold">Project</span>
       </h1>
@@ -180,10 +188,12 @@
     </section>
 
     <section class="h-screen text-white" id="contact">
-      <h1 class="text-3xl text-center">Contact <span class="font-semibold">Me</span></h1>
-      <div class="flex justify-around items-center">
+      <h1 class="text-3xl text-center">
+        Contact <span class="font-semibold">Me</span>
+      </h1>
+      <div class="flex flex-col md:flex-row justify-around items-center">
         <form method="post" action="" class="flex flex-col w-96 gap-3">
-          <h1>Get in touch</h1>
+          <h1 class="text-white text-2xl">Get in touch</h1>
           <input
             type="text"
             name="username"
@@ -220,6 +230,7 @@
         </form>
 
         <div class="flex flex-col gap-3">
+          <h1 class="text-white text-2xl">My Contact Details</h1>
           <div>
             <h1 class="text-[#ffaf27] text-xl">Email</h1>
             <p class="text-lg">example@example.com</p>
@@ -230,7 +241,11 @@
           </div>
           <div>
             <h1 class="text-[#ffaf27] text-xl">Discord</h1>
-            <a class="text-lg" href="https://discord.com/users/1010474132753883207">tokioshy</a>
+            <a
+              class="text-lg"
+              href="https://discord.com/users/1010474132753883207"
+              >tokioshy</a
+            >
           </div>
           <div>
             <h1 class="text-[#ffaf27] text-xl">Email</h1>
