--- a/tailwind-ver/index.html
+++ b/tailwind-ver/index.html
@@ -20,7 +20,7 @@
   </head>
   <body class="bg-[#252734]">
     <nav
-      class="flex bg-[#ffaf27] rounded-br-full rounded-bl-full justify-around py-5 align-center"
+      class="flex bg-[#ffaf27] rounded-br-full rounded-bl-full justify-between py-5 px-16 align-center"
     >
       <h1 class="text-2xl md:text-3xl">Tokioshy</h1>
       <ul class="hidden md:flex align-center">
@@ -79,7 +79,7 @@
       <img
         src="../images/Image (2).png"
         alt="Chitoge 2"
-        class="max-h-[65%] md:max-h-full"
+        class="max-h-[65%] lg:max-h-full mt-5 md:mt-0"
       />
       <div
         class="w-full md:w-1/3 text-white md:border-l-4 border-[#ffaf27] pl-4"
@@ -99,12 +99,11 @@
       </div>
     </section>
 
-    <section class="h-auto md:h-screen" id="projects">
+    <!-- <section class="h-auto md:h-screen" id="projects">
       <h1 class="text-3xl text-white border-b-4 w-fit border-[#ffaf27] pb-2">
         My <span class="font-semibold">Project</span>
       </h1>
       <div class="block md:flex justify-center items-center w-2/3 m-auto gap-5">
-        <!-- Card  1 -->
         <div
           class="w-full md:w-80 justify-center items-center bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
         >
@@ -131,7 +130,6 @@
           </div>
         </div>
 
-        <!-- Card  2 -->
         <div
           class="w-full md:w-80 justify-center items-center bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
         >
@@ -158,7 +156,6 @@
           </div>
         </div>
 
-        <!-- Card  3 -->
         <div
           class="w-full md:w-80 justify-center items-center bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
         >
@@ -185,15 +182,114 @@
           </div>
         </div>
       </div>
+    </section> -->
+
+    <section
+      class="h-auto md:h-screen flex flex-col items-center justify-center"
+      id="projects"
+    >
+      <h1 class="text-3xl text-white border-b-4 w-fit border-[#ffaf27] pb-2">
+        My <span class="font-semibold">Project</span>
+      </h1>
+      <div
+        class="flex flex-col md:flex-row items-center justify-center w-2/3 m-auto gap-5"
+      >
+        <!-- Card 1 -->
+        <div
+          class="w-full md:w-80 bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
+        >
+          <img
+            src="../images/Rectangle.png"
+            alt="img"
+            title="img"
+            class="w-full h-auto object-cover rounded-t-lg"
+          />
+          <div class="w-full p-4 flex flex-col text-white items-center">
+            <h1 class="text-3xl font-bold">Typing English with Me!</h1>
+            <p class="my-4">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
+              tortor dignissim convallis aenean. Imperdiet massa tincidunt nunc
+              pulvinar.
+            </p>
+            <a
+              href="#"
+              class="my-4 px-4 py-2 text-white text-center hover-bg-[#cc8c1f] bg-[#ffaf27]"
+            >
+              Read more
+            </a>
+          </div>
+        </div>
+
+        <!-- Card 2 -->
+        <div
+          class="w-full md:w-80 bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
+        >
+          <img
+            src="../images/Rectangle.png"
+            alt="img"
+            title="img"
+            class="w-full h-auto object-cover rounded-t-lg"
+          />
+          <div class="w-full p-4 flex flex-col text-white items-center">
+            <h1 class="text-3xl font-bold">Typing English with Me!</h1>
+            <p class="my-4">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
+              tortor dignissim convallis aenean. Imperdiet massa tincidunt nunc
+              pulvinar.
+            </p>
+            <a
+              href="#"
+              class="my-4 px-4 py-2 text-white text-center hover-bg-[#cc8c1f] bg-[#ffaf27]"
+            >
+              Read more
+            </a>
+          </div>
+        </div>
+
+        <!-- Card 3 -->
+        <div
+          class="w-full md:w-80 bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
+        >
+          <img
+            src="../images/Rectangle.png"
+            alt="img"
+            title="img"
+            class="w-full h-auto object-cover rounded-t-lg"
+          />
+          <div class="w-full p-4 flex flex-col text-white items-center">
+            <h1 class="text-3xl font-bold">Typing English with Me!</h1>
+            <p class="my-4">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
+              tortor dignissim convallis aenean. Imperdiet massa tincidunt nunc
+              pulvinar.
+            </p>
+            <a
+              href="#"
+              class="mt-4 px-4 py-2 text-white text-center hover-bg-[#cc8c1f] bg-[#ffaf27]"
+            >
+              Read more
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <section class="h-screen text-white" id="contact">
-      <h1 class="text-3xl text-center">
+    <section class="text-white" id="contact">
+      <h1 class="text-3xl text-center hidden md:block">
         Contact <span class="font-semibold">Me</span>
       </h1>
-      <div class="flex flex-col md:flex-row justify-around items-center">
-        <form method="post" action="" class="flex flex-col w-96 gap-3">
-          <h1 class="text-white text-2xl">Get in touch</h1>
+      <div
+        class="flex flex-col md:flex-row justify-around items-center h-screen md:h-auto"
+      >
+        <form method="post" action="" class="flex flex-col w-96 gap-3 mt-20">
+          <h1
+            class="text-white text-2xl text-center border-b-4 border-[#ffaf27] w-fit mx-auto pb-2"
+          >
+            Get In <span class="font-semibold">Touch</span>
+          </h1>
           <input
             type="text"
             name="username"
@@ -225,12 +321,14 @@
           <input
             type="submit"
             value="Send message"
-            class="bg-[#ffaf27] w-fit p-3 rounded-full text-black"
+            class="bg-[#ffaf27] w-full md:w-fit p-3 rounded-xl text-black"
           />
         </form>
 
-        <div class="flex flex-col gap-3">
-          <h1 class="text-white text-2xl">My Contact Details</h1>
+        <div class="flex flex-col gap-3 h-screen md:h-auto">
+          <h1 class="text-white text-2xl text-center md:text-left">
+            My Contact Details
+          </h1>
           <div>
             <h1 class="text-[#ffaf27] text-xl">Email</h1>
             <p class="text-lg">example@example.com</p>
@@ -254,6 +352,12 @@
         </div>
       </div>
     </section>
+
+    <footer
+      class="bg-[#464B61] md:bg-[#252734] py-5 text-white text-center text-xl"
+    >
+      <p>Copyright © Farel 2023 All rights reserved.</p>
+    </footer>
 
     <button
       onclick="topFunction()"
