--- a/tailwind-ver/index.html
+++ b/tailwind-ver/index.html
@@ -13,16 +13,19 @@
       input[type="number"]::-webkit-inner-spin-button,
       input[type="number"]::-webkit-outer-spin-button {
         -webkit-appearance: none;
-        -moz-appearance: textfield;
         appearance: none;
+      }
+
+      input[type="number"] {
+        -moz-appearance: textfield;
       }
     </style>
   </head>
   <body class="bg-[#252734]">
     <nav
-      class="flex bg-[#ffaf27] rounded-br-full rounded-bl-full justify-between py-5 px-16 align-center"
+      class="flex bg-[#ffaf27] rounded-br-full rounded-bl-full justify-between py-5 px-20 align-center"
     >
-      <h1 class="text-2xl md:text-3xl">Tokioshy</h1>
+      <h1 class="text-2xl md:text-3xl">Farel</h1>
       <ul class="hidden md:flex align-center">
         <li class="mx-2 text-lg md:text-xl"><a href="#home">Home</a></li>
         <li class="mx-2 text-lg md:text-xl"><a href="#about-me">About</a></li>
@@ -43,28 +46,28 @@
       <img
         src="../images/Image (1).png"
         alt="Chitoge"
-        class="max-h-[65%] md:max-h-full w-auto"
+        class="max-h-[65%] md:max-h-70% w-auto"
       />
       <div class="text-white md:w-1/3 text-center md:text-left">
         <p class="text-3xl">Hello,</p>
         <h1 class="text-3xl md:text-4xl">
-          I'm <span class="font-semibold">Tokioshy Herman Saputra</span>
+          I'm <span class="font-semibold">Muhammad Farel</span>
         </h1>
         <h2 class="text-3xl md:text-4xl">
           a <span class="font-semibold">Student</span>
         </h2>
         <p class="text-lg md:text-2xl">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed
-          pharetra leo. Nunc vitae metus auctor, vestibulum lorem id, hendrerit
-          neque.
+          I can do a lot of things. One of them is made a website.
+          I also play a game, my favorite one for now is Minecraft.
+          I can speak in EN and ID.
         </p>
-        <div class="mt-3 text-black">
-          <a href="#about-me" class="bg-[#ffaf27] px-3 py-2 rounded-full"
+        <div class="mt-5 text-black text-[21px]">
+          <a href="#about-me" class="bg-[#ffaf27] px-5 py-3 rounded-full "
             >Learn More</a
           >
           <a
             href="../images/tokioshy.png"
-            class="bg-[#ffaf27] px-3 py-2 rounded-full"
+            class="bg-[#ffaf27] px-5 py-3 rounded-full"
             download="Tokioshy's Head"
             >Download CV</a
           >
@@ -79,7 +82,7 @@
       <img
         src="../images/Image (2).png"
         alt="Chitoge 2"
-        class="max-h-[65%] lg:max-h-full mt-5 md:mt-0"
+        class="max-h-[65%] lg:max-h-70% mt-5 md:mt-0"
       />
       <div
         class="w-full md:w-1/3 text-white md:border-l-4 border-[#ffaf27] pl-4"
@@ -99,91 +102,6 @@
       </div>
     </section>
 
-    <!-- <section class="h-auto md:h-screen" id="projects">
-      <h1 class="text-3xl text-white border-b-4 w-fit border-[#ffaf27] pb-2">
-        My <span class="font-semibold">Project</span>
-      </h1>
-      <div class="block md:flex justify-center items-center w-2/3 m-auto gap-5">
-        <div
-          class="w-full md:w-80 justify-center items-center bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
-        >
-          <img
-            src="../images/Rectangle.png"
-            alt="img"
-            title="img"
-            class="w-full h-auto object-cover rounded-t-lg"
-          />
-          <div class="w-full p-4 justify-start flex flex-col text-white">
-            <h1 class="text-3xl font-bold">Typing english with me!</h1>
-            <p class="my-4">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
-              tortor dignissim convallis aenean. Imperdiet massa tincidunt nunc
-              pulvinar.
-            </p>
-            <a
-              href="#"
-              class="my-4 px-4 py-2 text-white text-center hover:bg-[#cc8c1f] bg-[#ffaf27]"
-            >
-              Read more
-            </a>
-          </div>
-        </div>
-
-        <div
-          class="w-full md:w-80 justify-center items-center bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
-        >
-          <img
-            src="../images/Rectangle.png"
-            alt="img"
-            title="img"
-            class="w-full h-auto object-cover rounded-t-lg"
-          />
-          <div class="w-full p-4 justify-start flex flex-col text-white">
-            <h1 class="text-3xl font-bold">Typing english with me!</h1>
-            <p class="my-4">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
-              tortor dignissim convallis aenean. Imperdiet massa tincidunt nunc
-              pulvinar.
-            </p>
-            <a
-              href="#"
-              class="my-4 px-4 py-2 text-white text-center hover:bg-[#cc8c1f] bg-[#ffaf27]"
-            >
-              Read more
-            </a>
-          </div>
-        </div>
-
-        <div
-          class="w-full md:w-80 justify-center items-center bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
-        >
-          <img
-            src="../images/Rectangle.png"
-            alt="img"
-            title="img"
-            class="w-full h-auto object-cover rounded-t-lg"
-          />
-          <div class="w-full p-4 justify-start flex flex-col text-white">
-            <h1 class="text-3xl font-bold">Typing english with me!</h1>
-            <p class="my-4">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
-              tortor dignissim convallis aenean. Imperdiet massa tincidunt nunc
-              pulvinar.
-            </p>
-            <a
-              href="#"
-              class="mt-4 px-4 py-2 text-white text-center hover:bg-[#cc8c1f] bg-[#ffaf27]"
-            >
-              Read more
-            </a>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
     <section
       class="h-auto md:h-screen flex flex-col items-center justify-center"
       id="projects"
@@ -199,22 +117,21 @@
           class="w-full md:w-80 bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
         >
           <img
-            src="../images/Rectangle.png"
+            src="../images/Rumah.png"
             alt="img"
             title="img"
-            class="w-full h-auto object-cover rounded-t-lg"
+            class="w-full h-auto object-cover rounded-lg"
           />
           <div class="w-full p-4 flex flex-col text-white items-center">
-            <h1 class="text-3xl font-bold">Typing English with Me!</h1>
+            <h1 class="text-3xl font-bold">Made a 3D Object</h1>
             <p class="my-4">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
-              tortor dignissim convallis aenean. Imperdiet massa tincidunt nunc
-              pulvinar.
+              Creating 3D object is not easy, but I managed to learn it.
+              One of the things I have made is a 3D house project. The 
+              manufacturing process takes a lot of time.
             </p>
             <a
-              href="#"
-              class="my-4 px-4 py-2 text-white text-center hover-bg-[#cc8c1f] bg-[#ffaf27]"
+              href="https://www.instagram.com/p/Cyzz0qWSTQA/?img_index=1" target="_blank"
+              class="my-4 px-4 py-2 text-black text-center hover-bg-[#cc8c1f] bg-[#ffaf27] rounded-full"
             >
               Read more
             </a>
@@ -226,22 +143,22 @@
           class="w-full md:w-80 bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
         >
           <img
-            src="../images/Rectangle.png"
+            src="../images/Website.png"
             alt="img"
             title="img"
-            class="w-full h-auto object-cover rounded-t-lg"
+            class="w-full h-auto object-cover rounded-lg"
           />
           <div class="w-full p-4 flex flex-col text-white items-center">
-            <h1 class="text-3xl font-bold">Typing English with Me!</h1>
+            <h1 class="text-3xl font-bold">Made a Website</h1>
             <p class="my-4">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
-              tortor dignissim convallis aenean. Imperdiet massa tincidunt nunc
-              pulvinar.
+              I made this website with my friend. In first step
+              we made the design for this website with Figma,
+              then, we continue to code it in VS Code. And upload
+              it to GitHub so we can collaborate.
             </p>
             <a
-              href="#"
-              class="my-4 px-4 py-2 text-white text-center hover-bg-[#cc8c1f] bg-[#ffaf27]"
+              href="#home"
+              class="my-4 px-4 py-2 text-black text-center hover-bg-[#cc8c1f] bg-[#ffaf27] rounded-full"
             >
               Read more
             </a>
@@ -253,22 +170,19 @@
           class="w-full md:w-80 bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
         >
           <img
-            src="../images/Rectangle.png"
+            src="../images/Anime.png"
             alt="img"
             title="img"
-            class="w-full h-auto object-cover rounded-t-lg"
+            class="w-full h-auto object-cover rounded-lg"
           />
           <div class="w-full p-4 flex flex-col text-white items-center">
-            <h1 class="text-3xl font-bold">Typing English with Me!</h1>
+            <h1 class="text-3xl font-bold">Watching Anime</h1>
             <p class="my-4">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac
-              tortor dignissim convallis aenean. Imperdiet massa tincidunt nunc
-              pulvinar.
+              Yeah... I'm watching anime.
             </p>
             <a
-              href="#"
-              class="mt-4 px-4 py-2 text-white text-center hover-bg-[#cc8c1f] bg-[#ffaf27]"
+              href="https://anilist.co/user/Tokioshy/" target="_blank"
+              class="my-4 px-4 py-2 text-black text-center hover-bg-[#cc8c1f] bg-[#ffaf27] rounded-full"
             >
               Read more
             </a>
@@ -286,7 +200,7 @@
       >
         <form method="post" action="" class="flex flex-col w-96 gap-3 mt-20">
           <h1
-            class="text-white text-2xl text-center border-b-4 border-[#ffaf27] w-fit mx-auto pb-2"
+            class="text-white text-2xl text-center  w-fit mx-auto pb-2"
           >
             Get In <span class="font-semibold">Touch</span>
           </h1>
@@ -308,7 +222,7 @@
             type="number"
             name="number"
             id="number"
-            placeholder="Your phone number"
+            placeholder="Your phone"
             class="p-2 rounded-lg bg-[#464B61]"
           />
           <input
@@ -321,7 +235,7 @@
           <input
             type="submit"
             value="Send message"
-            class="bg-[#ffaf27] w-full md:w-fit p-3 rounded-xl text-black"
+            class="bg-[#ffaf27] w-full md:w-fit p-3 rounded-full text-black"
           />
         </form>
 
@@ -331,22 +245,22 @@
           </h1>
           <div>
             <h1 class="text-[#ffaf27] text-xl">Email</h1>
-            <p class="text-lg">example@example.com</p>
+            <p class="text-lg">mfarelbrillian2007@gmail.com</p>
           </div>
           <div>
             <h1 class="text-[#ffaf27] text-xl">Phone</h1>
-            <p class="text-lg">+62 123 4567 8910</p>
+            <p class="text-lg">+62 851 7427 5553</p>
           </div>
           <div>
             <h1 class="text-[#ffaf27] text-xl">Discord</h1>
             <a
               class="text-lg"
               href="https://discord.com/users/1010474132753883207"
-              >tokioshy</a
+              >Tokioshy#4631</a
             >
           </div>
           <div>
-            <h1 class="text-[#ffaf27] text-xl">Email</h1>
+            <h1 class="text-[#ffaf27] text-xl">Adress</h1>
             <p class="text-lg">123 Example Street</p>
           </div>
         </div>
@@ -356,7 +270,7 @@
     <footer
       class="bg-[#464B61] md:bg-[#252734] py-5 text-white text-center text-xl"
     >
-      <p>Copyright © Farel 2023 All rights reserved.</p>
+      <p>Copyright © Farel - Izyankareem 2023 All rights reserved.</p>
     </footer>
 
     <button
