--- a/tailwind-ver/index.html
+++ b/tailwind-ver/index.html
@@ -192,7 +192,7 @@
     </section>
 
     <section class="text-white" id="contact">
-      <h1 class="text-3xl text-center hidden md:block">
+      <h1 class="text-3xl text-center hidden md:block mb-16">
         Contact <span class="font-semibold">Me</span>
       </h1>
       <div
@@ -200,7 +200,7 @@
       >
         <form method="post" action="" class="flex flex-col w-96 gap-3 mt-20">
           <h1
-            class="text-white text-2xl text-center  w-fit mx-auto pb-2"
+            class="text-white text-2xl text-center w-fit mx-auto pb-2"
           >
             Get In <span class="font-semibold">Touch</span>
           </h1>
@@ -239,7 +239,7 @@
           />
         </form>
 
-        <div class="flex flex-col gap-3 h-screen md:h-auto">
+        <div class="flex flex-col gap-3 h-screen md:h-auto mb-10">
           <h1 class="text-white text-2xl text-center md:text-left">
             My Contact Details
           </h1>
@@ -268,7 +268,7 @@
     </section>
 
     <footer
-      class="bg-[#464B61] md:bg-[#252734] py-5 text-white text-center text-xl"
+      class="bg-[#464B61] md:bg-[#464B61] py-5 text-white text-center text-xl"
     >
       <p>Copyright © Farel - Izyankareem 2023 All rights reserved.</p>
     </footer>
