--- a/tailwind-ver/index.html
+++ b/tailwind-ver/index.html
@@ -192,7 +192,7 @@
     </section>
 
     <section class="text-white" id="contact">
-      <h1 class="text-3xl text-center hidden md:block mb-16">
+      <h1 class="text-3xl text-center hidden md:block mt-14">
         Contact <span class="font-semibold">Me</span>
       </h1>
       <div
@@ -239,7 +239,7 @@
           />
         </form>
 
-        <div class="flex flex-col gap-3 h-screen md:h-auto mb-10">
+        <div class="flex flex-col gap-3 h-screen md:h-auto mt-4">
           <h1 class="text-white text-2xl text-center md:text-left">
             My Contact Details
           </h1>
@@ -261,16 +261,18 @@
           </div>
           <div>
             <h1 class="text-[#ffaf27] text-xl">Adress</h1>
-            <p class="text-lg">123 Example Street</p>
+            <p class="text-lg">Indonesia, Bandung</p>
+            <p class="text-lg">Tanjung 3 Street, No 49</p>
+            <p class="text-lg">Rancaekek Kencana, 40394</p>
           </div>
         </div>
       </div>
     </section>
 
     <footer
-      class="bg-[#464B61] md:bg-[#464B61] py-5 text-white text-center text-xl"
+      class="bg-[#464B61] md:bg-[#252734] py-5 text-white text-center text-lg mt-20"
     >
-      <p>Copyright © Farel - Izyankareem 2023 All rights reserved.</p>
+      <p>Copyright &copy; Farel - Izyankareem 2023 All rights reserved.</p>
     </footer>
 
     <button
