Updating style for contact section

--- a/tailwind-ver/index.html
+++ b/tailwind-ver/index.html
@@ -17,6 +17,7 @@
       }
 
       input[type="number"] {
+        appearance: textfield;
         -moz-appearance: textfield;
       }
     </style>
@@ -57,12 +58,11 @@
           a <span class="font-semibold">Student</span>
         </h2>
         <p class="text-lg md:text-2xl">
-          I can do a lot of things. One of them is made a website.
-          I also play a game, my favorite one for now is Minecraft.
-          I can speak in EN and ID.
+          I can do a lot of things. One of them is made a website. I also play a
+          game, my favorite one for now is Minecraft. I can speak in EN and ID.
         </p>
         <div class="mt-5 text-black text-[21px]">
-          <a href="#about-me" class="bg-[#ffaf27] px-5 py-3 rounded-full "
+          <a href="#about-me" class="bg-[#ffaf27] px-5 py-3 rounded-full"
             >Learn More</a
           >
           <a
@@ -125,12 +125,13 @@
           <div class="w-full p-4 flex flex-col text-white items-center">
             <h1 class="text-3xl font-bold">Made a 3D Object</h1>
             <p class="my-4">
-              Creating 3D object is not easy, but I managed to learn it.
-              One of the things I have made is a 3D house project. The 
-              manufacturing process takes a lot of time.
+              Creating 3D object is not easy, but I managed to learn it. One of
+              the things I have made is a 3D house project. The manufacturing
+              process takes a lot of time.
             </p>
             <a
-              href="https://www.instagram.com/p/Cyzz0qWSTQA/?img_index=1" target="_blank"
+              href="https://www.instagram.com/p/Cyzz0qWSTQA/?img_index=1"
+              target="_blank"
               class="my-4 px-4 py-2 text-black text-center hover-bg-[#cc8c1f] bg-[#ffaf27] rounded-full"
             >
               Read more
@@ -151,10 +152,9 @@
           <div class="w-full p-4 flex flex-col text-white items-center">
             <h1 class="text-3xl font-bold">Made a Website</h1>
             <p class="my-4">
-              I made this website with my friend. In first step
-              we made the design for this website with Figma,
-              then, we continue to code it in VS Code. And upload
-              it to GitHub so we can collaborate.
+              I made this website with my friend. In first step we made the
+              design for this website with Figma, then, we continue to code it
+              in VS Code. And upload it to GitHub so we can collaborate.
             </p>
             <a
               href="#home"
@@ -177,11 +177,10 @@
           />
           <div class="w-full p-4 flex flex-col text-white items-center">
             <h1 class="text-3xl font-bold">Watching Anime</h1>
-            <p class="my-4">
-              Yeah... I'm watching anime.
-            </p>
+            <p class="my-4">Yeah... I'm watching anime.</p>
             <a
-              href="https://anilist.co/user/Tokioshy/" target="_blank"
+              href="https://anilist.co/user/Tokioshy/"
+              target="_blank"
               class="my-4 px-4 py-2 text-black text-center hover-bg-[#cc8c1f] bg-[#ffaf27] rounded-full"
             >
               Read more
@@ -196,12 +195,10 @@
         Contact <span class="font-semibold">Me</span>
       </h1>
       <div
-        class="flex flex-col md:flex-row justify-around items-center h-screen md:h-auto"
+        class="flex flex-col md:flex-row justify-center gap-x-40 items-center h-screen md:h-auto"
       >
         <form method="post" action="" class="flex flex-col w-96 gap-3 mt-20">
-          <h1
-            class="text-white text-2xl text-center w-fit mx-auto pb-2"
-          >
+          <h1 class="text-white text-2xl text-center w-fit mx-auto pb-2">
             Get In <span class="font-semibold">Touch</span>
           </h1>
           <input
@@ -272,7 +269,7 @@
     <footer
       class="bg-[#464B61] md:bg-[#252734] py-5 text-white text-center text-lg mt-20"
     >
-      <p>Copyright &copy; Farel - Izyankareem 2023 All rights reserved.</p>
+      <p>Copyright &copy; Farel & Izyankareem 2023 All rights reserved.</p>
     </footer>
 
     <button
