--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             >Learn More</a
           >
           <a
-            href="./images/tokioshy.png"
+            href="./images/Coming Soon.jpg"
+            target="_blank"
             class="bg-[#ffaf27] px-5 py-3 rounded-full"
-            download="Tokioshy's Head"
             >Download CV</a
           >
         </div>
@@ -108,10 +108,10 @@
     </section>
 
     <section
-      class="h-auto md:h-screen flex flex-col items-center justify-center"
+      class="h-10 md:h-screen flex flex-col items-center justify-center"
       id="projects"
     >
-      <h1 class="text-3xl text-white border-b-4 w-fit border-[#ffaf27] pb-2">
+      <h1 class="text-3xl text-white border-b-4 mt-6 w-fit border-[#ffaf27] pb-2">
         My <span class="font-semibold">Project</span>
       </h1>
       <div
@@ -121,7 +121,7 @@
         <div
           class="w-full md:w-80 bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
         >
-          <img
+        <img
             src="./images/Rumah.png"
             alt="img"
             title="img"
@@ -148,21 +148,22 @@
         <div
           class="w-full md:w-80 bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
         >
-          <img
-            src="./images/Website.png"
+        <img
+            src="./images/Rumah.png"
             alt="img"
             title="img"
             class="w-full h-auto object-cover rounded-lg"
           />
           <div class="w-full p-4 flex flex-col text-white items-center">
-            <h1 class="text-3xl font-bold">Made a Website</h1>
+            <h1 class="text-3xl font-bold">Made a 3D Object</h1>
             <p class="my-4">
-              I made this website with my friend. In first step we made the
-              design for this website with Figma, then, we continue to code it
-              in VS Code. And upload it to GitHub so we can collaborate.
+              Creating 3D object is not easy, but I managed to learn it. One of
+              the things I have made is a 3D house project. The manufacturing
+              process takes a lot of time.
             </p>
             <a
-              href="#home"
+              href="https://www.instagram.com/p/Cyzz0qWSTQA/?img_index=1"
+              target="_blank"
               class="my-4 px-4 py-2 text-black text-center hover-bg-[#cc8c1f] bg-[#ffaf27] rounded-full"
             >
               Read more
@@ -174,17 +175,21 @@
         <div
           class="w-full md:w-80 bg-[#464b61] shadow-lg rounded-2xl flex flex-col p-3 mt-5 md:mt-0"
         >
-          <img
-            src="./images/Anime.png"
+        <img
+            src="./images/Rumah.png"
             alt="img"
             title="img"
             class="w-full h-auto object-cover rounded-lg"
           />
           <div class="w-full p-4 flex flex-col text-white items-center">
-            <h1 class="text-3xl font-bold">Watching Anime</h1>
-            <p class="my-4">Yeah... I'm watching anime.</p>
+            <h1 class="text-3xl font-bold">Made a 3D Object</h1>
+            <p class="my-4">
+              Creating 3D object is not easy, but I managed to learn it. One of
+              the things I have made is a 3D house project. The manufacturing
+              process takes a lot of time.
+            </p>
             <a
-              href="https://anilist.co/user/Tokioshy/"
+              href="https://www.instagram.com/p/Cyzz0qWSTQA/?img_index=1"
               target="_blank"
               class="my-4 px-4 py-2 text-black text-center hover-bg-[#cc8c1f] bg-[#ffaf27] rounded-full"
             >
