--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li class="mx-2 text-lg md:text-xl"><a href="#home">Home</a></li>
         <li class="mx-2 text-lg md:text-xl"><a href="#about-me">About</a></li>
         <li class="mx-2 text-lg md:text-xl">
-          <a href="#projects">Portofolio</a>
+          <a href="#projects">Portfolio</a>
         </li>
         <li class="mx-2 text-lg md:text-xl"><a href="#contact">Contact</a></li>
       </ul>
